feat: Handler e compose
