# src/main/java/org/fipe/entrypoint/api1/dto/VehicleResponse.java
@@ -1,12 +1,7 @@
 package org.fipe.entrypoint.api1.dto;
 
 public record VehicleResponse(
-        String vehicleType,
-        Integer reference,
-        String brandCode,
-        String brandName,
         String code,
-        String name,
-        String observations
+        String name
 ) {
 }
